<resources>
    <string name="app_name">IntentsProj</string>
    <string name="number_1">Number 1 :</string>
    <string name="number_2">Number 2 :</string>
    <string name="div">/</string>
    <string name="multi">*</string>
    <string name="mini">+</string>
    <string name="add">-</string>
    <string name="enter_a_number1">   </string>
    <string name="enter_a_number">   </string>
</resources>